Some changes I have to keep for now whilst I do the backup.

--- a/notebooks/gans/GANs-for-quickdraw-dataset.ipynb
+++ b/notebooks/gans/GANs-for-quickdraw-dataset.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_images = '../../quickdraw_data/apple.npy'\n",
+    "input_images = 'quickdraw/apple.npy'\n",
     "data = np.load(input_images)\n",
     "\n",
     "print(data.shape)\n",
