--- a/notebooks/keras/intermediate-net-in-keras.ipynb
+++ b/notebooks/keras/intermediate-net-in-keras.ipynb
@@ -139,7 +139,7 @@
     "model = Sequential()\n",
     "model.add(Dense(128, input_shape = (784,)))\n",
     "# model.add(BatchNormalization())\n",
-    "# model.add(SineReLU(epsilon=e))\n",
+    "model.add(SineReLU(epsilon=e))\n",
     "# model.add(Activation('relu'))\n",
     "# model.add(LeakyReLU(alpha=0.01))\n",
     "model.add(Dropout(0.2, seed=42))\n",
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
