Add Docker Compose.

--- a/notebooks/ekholabs/kaggle-mnist-challenge-cnn-SineReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-cnn-SineReLU.ipynb
@@ -32,6 +32,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"KERAS_BACKEND\"] = \"plaidml.keras.backend\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras\n",
+    "print(keras.__version__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keras\n",
+    "import scipy.ndimage\n",
+    "\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Model, Sequential\n",
     "from keras.layers import Input, Add, Dense, Dropout\n",
@@ -80,7 +101,7 @@
    "source": [
     "n_classes = 10\n",
     "\n",
-    "raw_data = np.loadtxt('kaggle/datasets/mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "raw_data = np.loadtxt('../../mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
     "    raw_data[:,1:], raw_data[:,0], test_size = 0.2)\n",
     "\n",
@@ -223,7 +244,7 @@
    "outputs": [],
    "source": [
     "modelCheckpoint = ModelCheckpoint(monitor='val_acc', filepath=output_dir+'/weights-cnn-mnist.hdf5', save_best_only=True, mode='max')\n",
-    "earlyStopping = EarlyStopping(monitor='val_acc', mode='max', patience=3)\n",
+    "earlyStopping = EarlyStopping(monitor='val_acc', mode='max', patience=10)\n",
     "\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)"
@@ -258,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"../logs/cnn-mnist-ReLUs-30-epochs-EkhoNet8-data-augmentation\")"
+    "# tensorboard = TensorBoard(\"../logs/cnn-mnist-ReLUs-30-epochs-EkhoNet8-data-augmentation\")"
    ]
   },
   {
@@ -276,7 +297,7 @@
    "source": [
     "hist = model.fit_generator(train_generator,\n",
     "                           steps_per_epoch = 3500,\n",
-    "                           epochs = 15,\n",
+    "                           epochs = 30,\n",
     "                           verbose = 1,\n",
     "                           validation_data = validation_generator,\n",
     "                           validation_steps = 3500,\n",
@@ -286,7 +307,7 @@
     "#                            epochs = 40,\n",
     "#                            verbose = 1,\n",
     "#                            validation_split = 0.1,\n",
-    "#                            callbacks=[annealer, tensorboard])"
+    "#                            callbacks=[modelCheckpoint, earlyStopping])"
    ]
   },
   {
@@ -336,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test_sub = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "X_test_sub = np.loadtxt('../../mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "X_test_sub = X_test_sub.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
     "\n",
     "predictions = model.predict(X_test_sub, verbose = 2)\n",
@@ -369,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
