--- a/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
@@ -32,6 +32,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# os.environ[\"KERAS_BACKEND\"] = \"plaidml.keras.backend\"\n",
+    "\n",
+    "import keras\n",
+    "print(keras.__version__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,14 +57,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keras\n",
+    "import scipy.ndimage\n",
+    "\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout\n",
     "from keras.layers import Flatten, MaxPooling2D, Conv2D, Activation\n",
     "from keras.layers.normalization import BatchNormalization\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.callbacks import TensorBoard, LearningRateScheduler, ModelCheckpoint\n",
+    "from keras.callbacks import TensorBoard, LearningRateScheduler, ModelCheckpoint, EarlyStopping\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -78,7 +92,7 @@
    "source": [
     "n_classes = 10\n",
     "\n",
-    "raw_data = np.loadtxt('kaggle/datasets/mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "raw_data = np.loadtxt('../../mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
     "    raw_data[:,1:], raw_data[:,0], test_size = 0.2)\n",
     "\n",
@@ -211,7 +225,8 @@
    "outputs": [],
    "source": [
     "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])\n",
-    "modelcheckpoint = ModelCheckpoint(filepath=output_dir+'/weights.{epoch:02d}.hdf5')\n",
+    "modelcheckpoint = ModelCheckpoint(filepath=output_dir+'/weights.{epoch:02d}.hdf5', save_best_only=True, mode='max')\n",
+    "earlyStopping = EarlyStopping(monitor='val_acc', mode='max', patience=10)\n",
     "\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)"
@@ -230,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"../logs/lenet-cnn-mnist-ReLU-30-epochs-EkhoNet8-data-augmentation\")"
+    "# tensorboard = TensorBoard(\"../logs/lenet-cnn-mnist-ReLU-30-epochs-EkhoNet8-data-augmentation\")"
    ]
   },
   {
@@ -246,19 +261,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist = model.fit_generator(train_generator,\n",
-    "                           steps_per_epoch = 3000,\n",
-    "                           epochs = 30,\n",
-    "                           verbose = 1,\n",
-    "                           validation_data = validation_generator,\n",
-    "                           validation_steps = 1500,\n",
-    "                           callbacks = [modelcheckpoint, annealer])#, tensorboard])\n",
-    "\n",
-    "# hist = model.fit(X_train, y_train, batch_size = 32,\n",
-    "#                            epochs = 40,\n",
+    "# hist = model.fit_generator(train_generator,\n",
+    "#                            steps_per_epoch = 3000,\n",
+    "#                            epochs = 30,\n",
     "#                            verbose = 1,\n",
-    "#                            validation_split = 0.1,\n",
-    "#                            callbacks=[annealer, tensorboard])"
+    "#                            validation_data = validation_generator,\n",
+    "#                            validation_steps = 1500,\n",
+    "#                            callbacks = [modelcheckpoint, earlyStopping])#annealer, tensorboard])\n",
+    "\n",
+    "hist = model.fit(X_train, y_train, batch_size = 64,\n",
+    "                           epochs = 40,\n",
+    "                           verbose = 1,\n",
+    "                           validation_split = 0.15,\n",
+    "                           callbacks=[modelcheckpoint, earlyStopping])"
    ]
   },
   {
@@ -274,8 +289,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!ls -larth model_output/multi-conv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Zero indexed -> get the epoch with highest accuracy.\n",
-    "saved_model = keras.models.load_model(output_dir + '/weights-multicnn-toxicity.hdf5') # 19 = 99.85; 22 = 99.83; 25 = 99.85; 26 = 99.85; 31 = 99.85"
+    "saved_model = keras.models.load_model(output_dir + '/weights.06.hdf5') # 19 = 99.85; 22 = 99.83; 25 = 99.85; 26 = 99.85; 31 = 99.85"
    ]
   },
   {
@@ -308,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test_sub = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "X_test_sub = np.loadtxt('../../mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "X_test_sub = X_test_sub.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
     "\n",
     "predictions = saved_model.predict(X_test_sub, verbose = 2)\n",
@@ -341,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
